# infoSentry

./: .editorconfig  .env.dev.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  Procfile.dev  README.md  deliverable.md  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  logic_async.json  task_doc.md
agents/: README.md
docs/: README.md
infoSentry-backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
infoSentry-backend/alembic/: env.py
infoSentry-backend/alembic/versions/: 0001_init.py  0002_add_ingest_logs.py  0003_add_user_budget_daily.py  0004_add_source_owner_private.py  0005_add_source_subscriptions.py  0006_add_device_sessions.py  0007_add_api_keys.py  0008_add_topic_key_and_item_time.py
infoSentry-backend/evals/prompt_regression/: agent.boundary_judge.v1.json  agent.push_worthiness.v1.json  goals.goal_draft.v1.json  goals.keyword_suggestion.v1.json
infoSentry-backend/prompts/agent/boundary_judge/: v1.zh-CN.prompty
infoSentry-backend/prompts/agent/push_worthiness/: v1.zh-CN.prompty
infoSentry-backend/prompts/goals/goal_draft/: v1.zh-CN.prompty
infoSentry-backend/prompts/goals/keyword_suggestion/: v1.zh-CN.prompty
infoSentry-backend/resources/email_templates/: magic_link.html  magic_link.txt  push_batch.html  push_digest.html  push_immediate.html  push_plain.txt
infoSentry-backend/scripts/: ai_model_compare.py  ai_models.example.toml  create_test_db.py  health_check.py  prompt_suggest_keywords.txt  refresh_matches.py  worker_heartbeat.py
infoSentry-backend/src/: __init__.py
infoSentry-backend/src/core/: __init__.py  config.py
infoSentry-backend/src/core/application/: dependencies.py  security.py
infoSentry-backend/src/core/domain/: __init__.py  aggregate_root.py  auth_scope.py  base_entity.py  events.py  exceptions.py  queues.py  repository.py  url_topic.py
infoSentry-backend/src/core/domain/ports/: business_logger.py  health_checker.py  kv.py  prompt_store.py  token.py
infoSentry-backend/src/core/infrastructure/: __init__.py  health.py  logging.py
infoSentry-backend/src/core/infrastructure/adapters/: business_logger_adapter.py  health_checker_adapter.py
infoSentry-backend/src/core/infrastructure/ai/: __init__.py  health.py
infoSentry-backend/src/core/infrastructure/celery/: __init__.py  app.py  queues.py  retry.py
infoSentry-backend/src/core/infrastructure/database/: base_model.py  event_aware_repository.py  mapper.py  session.py
infoSentry-backend/src/core/infrastructure/email/: template_loader.py
infoSentry-backend/src/core/interfaces/: __init__.py
infoSentry-backend/src/modules/: __init__.py
infoSentry-backend/src/modules/agent/: __init__.py  tasks.py
infoSentry-backend/src/modules/api_keys/: __init__.py
infoSentry-backend/src/modules/goals/: __init__.py
infoSentry-backend/src/modules/items/: __init__.py  tasks.py
infoSentry-backend/src/modules/push/: __init__.py  tasks.py
infoSentry-backend/src/modules/sources/: __init__.py  tasks.py
infoSentry-backend/src/modules/users/: __init__.py  tasks.py
infoSentry-backend/tests/: conftest.py
infoSentry-backend/tests/e2e/: __init__.py
infoSentry-backend/tests/integration/: __init__.py  test_e2e_flow.py  test_embedding_api.py  test_goal_match_ranking.py  test_smtp_debug.py
infoSentry-backend/tests/prompt_regression/: test_prompt_regression.py
infoSentry-backend/tests/unit/: test_agent.py  test_agent_orchestrator.py  test_api_keys.py  test_default_public_source_sync_service.py  test_device_sessions.py  test_dockerfile_prompt_assets.py  test_email_templates.py  test_embedding_match.py  test_goal_draft_service.py  test_goal_match_query_service.py  test_ingest.py  test_keyword_suggestion.py  test_newsnow_catalog_provider.py  test_push.py  test_send_email_service.py
(+320 files in other folders)
